parser.output
   0  $accept : %entry% $end

   1  program : header vdecl_list func_list
   2          | header func_list

   3  header : config_list
   4         | config_list field_decl_list

   5  config_list :
   6              | config_list config
   7              | config_list NEWLINE

   8  config : CONFIGURE ID COLON expr

   9  field_decl_list : field_decl
  10                  | field_decl_list field_decl
  11                  | field_decl_list NEWLINE

  12  field_decl : TYPE HAS TYPE CALLED ID

  13  vdecl_list : vdecl
  14             | vdecl_list vdecl
  15             | vdecl_list NEWLINE

  16  vdecl : NEW TYPE ID COLON expr

  17  func_list : func
  18            | func_list func
  19            | func_list NEWLINE

  20  func : ID COLON block
  21       | ID WITH formal_list COLON block

  22  formal_list : formal
  23              | formal_list AND formal

  24  formal : TYPE ID

  25  block : INDENT stmt_list DEDENT

  26  stmt_list :
  27            | stmt_list stmt

  28  stmt : stmt NEWLINE
  29       | update
  30       | DO ID
  31       | DO ID WITH arg_list
  32       | IF expr COLON block
  33       | IF expr COLON block ELSE COLON block
  34       | WHILE expr COLON block
  35       | FOR update SEMI expr SEMI update COLON block
  36       | BREAK
  37       | CONTINUE
  38       | OPENBRACE stmt CLOSEBRACE TIMES expr
  39       | expr PREPEND_TOP expr
  40       | expr PREPEND_BOTTOM expr
  41       | expr APPEND_TOP expr
  42       | expr APPEND_BOTTOM expr

  43  arg_list : expr
  44           | arg_list AND expr

  45  update : vdecl
  46         | var COLON expr

  47  expr : NUMBER_LITERAL
  48       | BOOL_LITERAL
  49       | STRING_LITERAL
  50       | var
  51       | expr ADD expr
  52       | expr MINUS expr
  53       | expr TIMES expr
  54       | expr DIVIDE expr
  55       | expr LT expr
  56       | expr LTOE expr
  57       | expr GT expr
  58       | expr GTOE expr
  59       | expr EQUAL expr
  60       | expr NOTEQUAL expr
  61       | expr DISJ expr
  62       | expr CONJ expr
  63       | NOT expr
  64       | OPENPAREN expr CLOSEPAREN

  65  var : ID
  66      | DOT_ID

  67  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (67)
	config_list : .  (5)

	.  reduce 5

	program  goto 3
	header  goto 4
	config_list  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (67)

	.  reduce 67


state 4
	program : header . vdecl_list func_list  (1)
	program : header . func_list  (2)

	NEW  shift 6
	ID  shift 7
	.  error

	vdecl_list  goto 8
	func_list  goto 9
	vdecl  goto 10
	func  goto 11


state 5
	header : config_list .  (3)
	header : config_list . field_decl_list  (4)
	config_list : config_list . config  (6)
	config_list : config_list . NEWLINE  (7)

	NEWLINE  shift 12
	CONFIGURE  shift 13
	TYPE  shift 14
	NEW  reduce 3
	ID  reduce 3

	field_decl_list  goto 15
	config  goto 16
	field_decl  goto 17


state 6
	vdecl : NEW . TYPE ID COLON expr  (16)

	TYPE  shift 18
	.  error


state 7
	func : ID . COLON block  (20)
	func : ID . WITH formal_list COLON block  (21)

	WITH  shift 19
	COLON  shift 20
	.  error


state 8
	program : header vdecl_list . func_list  (1)
	vdecl_list : vdecl_list . vdecl  (14)
	vdecl_list : vdecl_list . NEWLINE  (15)

	NEWLINE  shift 21
	NEW  shift 6
	ID  shift 7
	.  error

	func_list  goto 22
	vdecl  goto 23
	func  goto 11


state 9
	program : header func_list .  (2)
	func_list : func_list . func  (18)
	func_list : func_list . NEWLINE  (19)

	NEWLINE  shift 24
	ID  shift 7
	$end  reduce 2

	func  goto 25


state 10
	vdecl_list : vdecl .  (13)

	.  reduce 13


state 11
	func_list : func .  (17)

	.  reduce 17


state 12
	config_list : config_list NEWLINE .  (7)

	.  reduce 7


state 13
	config : CONFIGURE . ID COLON expr  (8)

	ID  shift 26
	.  error


state 14
	field_decl : TYPE . HAS TYPE CALLED ID  (12)

	HAS  shift 27
	.  error


state 15
	header : config_list field_decl_list .  (4)
	field_decl_list : field_decl_list . field_decl  (10)
	field_decl_list : field_decl_list . NEWLINE  (11)

	NEWLINE  shift 28
	TYPE  shift 14
	NEW  reduce 4
	ID  reduce 4

	field_decl  goto 29


state 16
	config_list : config_list config .  (6)

	.  reduce 6


state 17
	field_decl_list : field_decl .  (9)

	.  reduce 9


state 18
	vdecl : NEW TYPE . ID COLON expr  (16)

	ID  shift 30
	.  error


state 19
	func : ID WITH . formal_list COLON block  (21)

	TYPE  shift 31
	.  error

	formal_list  goto 32
	formal  goto 33


state 20
	func : ID COLON . block  (20)

	INDENT  shift 34
	.  error

	block  goto 35


state 21
	vdecl_list : vdecl_list NEWLINE .  (15)

	.  reduce 15


state 22
	program : header vdecl_list func_list .  (1)
	func_list : func_list . func  (18)
	func_list : func_list . NEWLINE  (19)

	NEWLINE  shift 24
	ID  shift 7
	$end  reduce 1

	func  goto 25


state 23
	vdecl_list : vdecl_list vdecl .  (14)

	.  reduce 14


state 24
	func_list : func_list NEWLINE .  (19)

	.  reduce 19


state 25
	func_list : func_list func .  (18)

	.  reduce 18


state 26
	config : CONFIGURE ID . COLON expr  (8)

	COLON  shift 36
	.  error


state 27
	field_decl : TYPE HAS . TYPE CALLED ID  (12)

	TYPE  shift 37
	.  error


state 28
	field_decl_list : field_decl_list NEWLINE .  (11)

	.  reduce 11


state 29
	field_decl_list : field_decl_list field_decl .  (10)

	.  reduce 10


state 30
	vdecl : NEW TYPE ID . COLON expr  (16)

	COLON  shift 38
	.  error


state 31
	formal : TYPE . ID  (24)

	ID  shift 39
	.  error


state 32
	func : ID WITH formal_list . COLON block  (21)
	formal_list : formal_list . AND formal  (23)

	AND  shift 40
	COLON  shift 41
	.  error


state 33
	formal_list : formal .  (22)

	.  reduce 22


state 34
	block : INDENT . stmt_list DEDENT  (25)
	stmt_list : .  (26)

	.  reduce 26

	stmt_list  goto 42


state 35
	func : ID COLON block .  (20)

	.  reduce 20


state 36
	config : CONFIGURE ID COLON . expr  (8)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 50
	var  goto 51


state 37
	field_decl : TYPE HAS TYPE . CALLED ID  (12)

	CALLED  shift 52
	.  error


state 38
	vdecl : NEW TYPE ID COLON . expr  (16)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 53
	var  goto 51


state 39
	formal : TYPE ID .  (24)

	.  reduce 24


state 40
	formal_list : formal_list AND . formal  (23)

	TYPE  shift 31
	.  error

	formal  goto 54


state 41
	func : ID WITH formal_list COLON . block  (21)

	INDENT  shift 34
	.  error

	block  goto 55


state 42
	block : INDENT stmt_list . DEDENT  (25)
	stmt_list : stmt_list . stmt  (27)

	DEDENT  shift 56
	DO  shift 57
	NEW  shift 6
	IF  shift 58
	WHILE  shift 59
	FOR  shift 60
	BREAK  shift 61
	CONTINUE  shift 62
	OPENPAREN  shift 43
	OPENBRACE  shift 63
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 64
	vdecl  goto 65
	stmt  goto 66
	update  goto 67
	var  goto 68


state 43
	expr : OPENPAREN . expr CLOSEPAREN  (64)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 69
	var  goto 51


state 44
	expr : BOOL_LITERAL .  (48)

	.  reduce 48


state 45
	expr : STRING_LITERAL .  (49)

	.  reduce 49


state 46
	var : ID .  (65)

	.  reduce 65


state 47
	var : DOT_ID .  (66)

	.  reduce 66


state 48
	expr : NUMBER_LITERAL .  (47)

	.  reduce 47


state 49
	expr : NOT . expr  (63)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 70
	var  goto 51


state 50
	config : CONFIGURE ID COLON expr .  (8)
	expr : expr . ADD expr  (51)
	expr : expr . MINUS expr  (52)
	expr : expr . TIMES expr  (53)
	expr : expr . DIVIDE expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LTOE expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GTOE expr  (58)
	expr : expr . EQUAL expr  (59)
	expr : expr . NOTEQUAL expr  (60)
	expr : expr . DISJ expr  (61)
	expr : expr . CONJ expr  (62)

	ADD  shift 71
	MINUS  shift 72
	TIMES  shift 73
	DIVIDE  shift 74
	LT  shift 75
	LTOE  shift 76
	GT  shift 77
	GTOE  shift 78
	EQUAL  shift 79
	NOTEQUAL  shift 80
	DISJ  shift 81
	CONJ  shift 82
	NEWLINE  reduce 8
	NEW  reduce 8
	CONFIGURE  reduce 8
	ID  reduce 8
	TYPE  reduce 8


state 51
	expr : var .  (50)

	.  reduce 50


state 52
	field_decl : TYPE HAS TYPE CALLED . ID  (12)

	ID  shift 83
	.  error


state 53
	vdecl : NEW TYPE ID COLON expr .  (16)
	expr : expr . ADD expr  (51)
	expr : expr . MINUS expr  (52)
	expr : expr . TIMES expr  (53)
	expr : expr . DIVIDE expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LTOE expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GTOE expr  (58)
	expr : expr . EQUAL expr  (59)
	expr : expr . NOTEQUAL expr  (60)
	expr : expr . DISJ expr  (61)
	expr : expr . CONJ expr  (62)

	ADD  shift 71
	MINUS  shift 72
	TIMES  shift 73
	DIVIDE  shift 74
	LT  shift 75
	LTOE  shift 76
	GT  shift 77
	GTOE  shift 78
	EQUAL  shift 79
	NOTEQUAL  shift 80
	DISJ  shift 81
	CONJ  shift 82
	NEWLINE  reduce 16
	DEDENT  reduce 16
	DO  reduce 16
	NEW  reduce 16
	COLON  reduce 16
	IF  reduce 16
	WHILE  reduce 16
	FOR  reduce 16
	SEMI  reduce 16
	BREAK  reduce 16
	CONTINUE  reduce 16
	OPENPAREN  reduce 16
	OPENBRACE  reduce 16
	CLOSEBRACE  reduce 16
	BOOL_LITERAL  reduce 16
	STRING_LITERAL  reduce 16
	ID  reduce 16
	DOT_ID  reduce 16
	NUMBER_LITERAL  reduce 16
	NOT  reduce 16


state 54
	formal_list : formal_list AND formal .  (23)

	.  reduce 23


state 55
	func : ID WITH formal_list COLON block .  (21)

	.  reduce 21


state 56
	block : INDENT stmt_list DEDENT .  (25)

	.  reduce 25


state 57
	stmt : DO . ID  (30)
	stmt : DO . ID WITH arg_list  (31)

	ID  shift 84
	.  error


state 58
	stmt : IF . expr COLON block  (32)
	stmt : IF . expr COLON block ELSE COLON block  (33)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 85
	var  goto 51


state 59
	stmt : WHILE . expr COLON block  (34)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 86
	var  goto 51


state 60
	stmt : FOR . update SEMI expr SEMI update COLON block  (35)

	NEW  shift 6
	ID  shift 46
	DOT_ID  shift 47
	.  error

	vdecl  goto 65
	update  goto 87
	var  goto 88


state 61
	stmt : BREAK .  (36)

	.  reduce 36


state 62
	stmt : CONTINUE .  (37)

	.  reduce 37


state 63
	stmt : OPENBRACE . stmt CLOSEBRACE TIMES expr  (38)

	DO  shift 57
	NEW  shift 6
	IF  shift 58
	WHILE  shift 59
	FOR  shift 60
	BREAK  shift 61
	CONTINUE  shift 62
	OPENPAREN  shift 43
	OPENBRACE  shift 63
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 64
	vdecl  goto 65
	stmt  goto 89
	update  goto 67
	var  goto 68


state 64
	stmt : expr . PREPEND_TOP expr  (39)
	stmt : expr . PREPEND_BOTTOM expr  (40)
	stmt : expr . APPEND_TOP expr  (41)
	stmt : expr . APPEND_BOTTOM expr  (42)
	expr : expr . ADD expr  (51)
	expr : expr . MINUS expr  (52)
	expr : expr . TIMES expr  (53)
	expr : expr . DIVIDE expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LTOE expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GTOE expr  (58)
	expr : expr . EQUAL expr  (59)
	expr : expr . NOTEQUAL expr  (60)
	expr : expr . DISJ expr  (61)
	expr : expr . CONJ expr  (62)

	ADD  shift 71
	MINUS  shift 72
	TIMES  shift 73
	DIVIDE  shift 74
	LT  shift 75
	LTOE  shift 76
	GT  shift 77
	GTOE  shift 78
	EQUAL  shift 79
	NOTEQUAL  shift 80
	DISJ  shift 81
	CONJ  shift 82
	PREPEND_TOP  shift 90
	PREPEND_BOTTOM  shift 91
	APPEND_TOP  shift 92
	APPEND_BOTTOM  shift 93
	.  error


state 65
	update : vdecl .  (45)

	.  reduce 45


state 66
	stmt_list : stmt_list stmt .  (27)
	stmt : stmt . NEWLINE  (28)

	NEWLINE  shift 94
	DEDENT  reduce 27
	DO  reduce 27
	NEW  reduce 27
	IF  reduce 27
	WHILE  reduce 27
	FOR  reduce 27
	BREAK  reduce 27
	CONTINUE  reduce 27
	OPENPAREN  reduce 27
	OPENBRACE  reduce 27
	BOOL_LITERAL  reduce 27
	STRING_LITERAL  reduce 27
	ID  reduce 27
	DOT_ID  reduce 27
	NUMBER_LITERAL  reduce 27
	NOT  reduce 27


state 67
	stmt : update .  (29)

	.  reduce 29


state 68
	update : var . COLON expr  (46)
	expr : var .  (50)

	COLON  shift 95
	ADD  reduce 50
	MINUS  reduce 50
	TIMES  reduce 50
	DIVIDE  reduce 50
	LT  reduce 50
	LTOE  reduce 50
	GT  reduce 50
	GTOE  reduce 50
	EQUAL  reduce 50
	NOTEQUAL  reduce 50
	DISJ  reduce 50
	CONJ  reduce 50
	PREPEND_TOP  reduce 50
	PREPEND_BOTTOM  reduce 50
	APPEND_TOP  reduce 50
	APPEND_BOTTOM  reduce 50


state 69
	expr : expr . ADD expr  (51)
	expr : expr . MINUS expr  (52)
	expr : expr . TIMES expr  (53)
	expr : expr . DIVIDE expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LTOE expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GTOE expr  (58)
	expr : expr . EQUAL expr  (59)
	expr : expr . NOTEQUAL expr  (60)
	expr : expr . DISJ expr  (61)
	expr : expr . CONJ expr  (62)
	expr : OPENPAREN expr . CLOSEPAREN  (64)

	CLOSEPAREN  shift 96
	ADD  shift 71
	MINUS  shift 72
	TIMES  shift 73
	DIVIDE  shift 74
	LT  shift 75
	LTOE  shift 76
	GT  shift 77
	GTOE  shift 78
	EQUAL  shift 79
	NOTEQUAL  shift 80
	DISJ  shift 81
	CONJ  shift 82
	.  error


state 70
	expr : expr . ADD expr  (51)
	expr : expr . MINUS expr  (52)
	expr : expr . TIMES expr  (53)
	expr : expr . DIVIDE expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LTOE expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GTOE expr  (58)
	expr : expr . EQUAL expr  (59)
	expr : expr . NOTEQUAL expr  (60)
	expr : expr . DISJ expr  (61)
	expr : expr . CONJ expr  (62)
	expr : NOT expr .  (63)

	.  reduce 63


state 71
	expr : expr ADD . expr  (51)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 97
	var  goto 51


state 72
	expr : expr MINUS . expr  (52)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 98
	var  goto 51


state 73
	expr : expr TIMES . expr  (53)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 99
	var  goto 51


state 74
	expr : expr DIVIDE . expr  (54)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 100
	var  goto 51


state 75
	expr : expr LT . expr  (55)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 101
	var  goto 51


state 76
	expr : expr LTOE . expr  (56)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 102
	var  goto 51


state 77
	expr : expr GT . expr  (57)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 103
	var  goto 51


state 78
	expr : expr GTOE . expr  (58)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 104
	var  goto 51


state 79
	expr : expr EQUAL . expr  (59)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 105
	var  goto 51


state 80
	expr : expr NOTEQUAL . expr  (60)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 106
	var  goto 51


state 81
	expr : expr DISJ . expr  (61)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 107
	var  goto 51


state 82
	expr : expr CONJ . expr  (62)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 108
	var  goto 51


state 83
	field_decl : TYPE HAS TYPE CALLED ID .  (12)

	.  reduce 12


state 84
	stmt : DO ID .  (30)
	stmt : DO ID . WITH arg_list  (31)

	WITH  shift 109
	NEWLINE  reduce 30
	DEDENT  reduce 30
	DO  reduce 30
	NEW  reduce 30
	IF  reduce 30
	WHILE  reduce 30
	FOR  reduce 30
	BREAK  reduce 30
	CONTINUE  reduce 30
	OPENPAREN  reduce 30
	OPENBRACE  reduce 30
	CLOSEBRACE  reduce 30
	BOOL_LITERAL  reduce 30
	STRING_LITERAL  reduce 30
	ID  reduce 30
	DOT_ID  reduce 30
	NUMBER_LITERAL  reduce 30
	NOT  reduce 30


state 85
	stmt : IF expr . COLON block  (32)
	stmt : IF expr . COLON block ELSE COLON block  (33)
	expr : expr . ADD expr  (51)
	expr : expr . MINUS expr  (52)
	expr : expr . TIMES expr  (53)
	expr : expr . DIVIDE expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LTOE expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GTOE expr  (58)
	expr : expr . EQUAL expr  (59)
	expr : expr . NOTEQUAL expr  (60)
	expr : expr . DISJ expr  (61)
	expr : expr . CONJ expr  (62)

	COLON  shift 110
	ADD  shift 71
	MINUS  shift 72
	TIMES  shift 73
	DIVIDE  shift 74
	LT  shift 75
	LTOE  shift 76
	GT  shift 77
	GTOE  shift 78
	EQUAL  shift 79
	NOTEQUAL  shift 80
	DISJ  shift 81
	CONJ  shift 82
	.  error


state 86
	stmt : WHILE expr . COLON block  (34)
	expr : expr . ADD expr  (51)
	expr : expr . MINUS expr  (52)
	expr : expr . TIMES expr  (53)
	expr : expr . DIVIDE expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LTOE expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GTOE expr  (58)
	expr : expr . EQUAL expr  (59)
	expr : expr . NOTEQUAL expr  (60)
	expr : expr . DISJ expr  (61)
	expr : expr . CONJ expr  (62)

	COLON  shift 111
	ADD  shift 71
	MINUS  shift 72
	TIMES  shift 73
	DIVIDE  shift 74
	LT  shift 75
	LTOE  shift 76
	GT  shift 77
	GTOE  shift 78
	EQUAL  shift 79
	NOTEQUAL  shift 80
	DISJ  shift 81
	CONJ  shift 82
	.  error


state 87
	stmt : FOR update . SEMI expr SEMI update COLON block  (35)

	SEMI  shift 112
	.  error


state 88
	update : var . COLON expr  (46)

	COLON  shift 95
	.  error


state 89
	stmt : stmt . NEWLINE  (28)
	stmt : OPENBRACE stmt . CLOSEBRACE TIMES expr  (38)

	NEWLINE  shift 94
	CLOSEBRACE  shift 113
	.  error


state 90
	stmt : expr PREPEND_TOP . expr  (39)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 114
	var  goto 51


state 91
	stmt : expr PREPEND_BOTTOM . expr  (40)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 115
	var  goto 51


state 92
	stmt : expr APPEND_TOP . expr  (41)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 116
	var  goto 51


state 93
	stmt : expr APPEND_BOTTOM . expr  (42)

	OPENPAREN  shift 43
	BOOL_LITERAL  shift 44
	STRING_LITERAL  shift 45
	ID  shift 46
	DOT_ID  shift 47
	NUMBER_LITERAL  shift 48
	NOT  shift 49
	.  error

	expr  goto 117
	var  goto 51


state 94
	stmt : stmt NEWLINE .  (28)

	.  reduce 28

